--- a/src/app/detailsprofil/detailsprofil.page.html
+++ b/src/app/detailsprofil/detailsprofil.page.html
@@ -17,30 +17,30 @@
       <h3><b>Abdoulaye Sy</b></h3>
     </div>
     <div class="row">
-      <div class="text-centre">
-        <div class="col-12">
+      <div class="text-centre in">
+        <div class="col-12 ">
           <p><b>Username:</b> Abdoulaye Sy </p>
         </div>
       </div>
     </div>
     
     <div class="row">
-      <div class="text-centre">
-        <div class="col-12">
-          <p><b>Adresse:</b> Bamako, Baco djicoroni ACI Golf </p>
+      <div class="text-centre in">
+        <div class="col-12 ">
+          <p><b>Adresse:</b> Bamako</p>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="text-centre">
-        <div class="col-12">
+      <div class="text-centre in">
+        <div class="col-12 ">
           <p><b>E-mail:</b> doulsy2021@gmail.com</p>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="text-centre">
-        <div class="col-12">
+      <div class="text-centre in">
+        <div class="col-12 ">
           <p><b>Téléphone:</b> 0022394218444 </p>
         </div>
       </div>
