--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -8,22 +8,23 @@
 </ion-header>
 
 <ion-content>
-
-  <ion-card class="crd"> 
-      <ion-card-content>
-       Abdoulaye Sy viens de partager une idée dans le ministere de l'Agriculture
-      </ion-card-content>
-  </ion-card>
-  <ion-card class="crd"> 
+  <div class="" style="width: 98%; margin-left: auto; margin-right: auto;">
+  <ion-card class="crd in">
     <ion-card-content>
-     Abass Maiga viens de partager une idée dans le ministere de l'enseignement Superieur
+      Abdoulaye Sy viens de partager une idée dans le ministere de l'Agriculture
     </ion-card-content>
-</ion-card>
-<ion-card class="crd"> 
-  <ion-card-content>
-  Youssouf Djiré viens de partager une idée dans le ministere de l'éducation national
-  </ion-card-content>
-</ion-card>
-
-
+  </ion-card>
+  <ion-card class="crd in">
+    <ion-card-content>
+      Abass Maiga viens de partager une idée dans le ministere de l'enseignement
+      Superieur
+    </ion-card-content>
+  </ion-card>
+  <ion-card class="crd in">
+    <ion-card-content>
+      Youssouf Djiré viens de partager une idée dans le ministere de l'éducation
+      national
+    </ion-card-content>
+  </ion-card>
+  </div>
 </ion-content>
