--- a/src/app/notification/notification.page.scss
+++ b/src/app/notification/notification.page.scss
@@ -1,3 +1,8 @@
-.clos{
-    color: red;
+.in{
+    width: 86%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    position: relative;  
+    margin-top: 15px;
 }
