--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -19,18 +19,9 @@
     </div>
     
     <div class="text-center">
-      <button type="submit" value="Deconnexion" class="deconnexion" routerLink="/connexion">Deconnexion</button>
+      <button value="Deconnexion" class="deconnexion" (click)="logout()">Déconnexion</button>
     </div>
  
-    
 
-   <!--  <h1 class="py-1"></h1>
-    <div class="row">
-    
-      <div col-6 class="bt">
-        <button class="btn" style="background-color:#146170 ;" routerLink="/tabs/modifier-user">Modifier <ion-icon name="options-outline"></ion-icon></button>
-        <h1 class="py-1"></h1>
-      </div>
-      </div> -->
   </div>
 </ion-content>
