--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -1,10 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Accueil</ion-title>
+    <ion-title size="" style="color: black; text-align: center;">Accueil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div class="" style="width: 98%; margin-left: auto; margin-right: auto;">
   <div class="row ">
     <div class="tit">
       Bienvenue sur la plateforme Akilina
@@ -17,67 +18,48 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../assets/images/1.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-inner cc">
+      <div class="carousel-item active ">
+        <img src="../../assets/images/im1.jpeg" class="" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/images/2.jpeg" class="d-block w-100" alt="...">
+        <img src="../../assets/images/im2.jpeg" class="" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/images/3.jpeg" class="d-block w-100" alt="...">
+        <img src="../../assets/images/im3.jpeg" class="" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 
   <div class="row">
-
+    <p class="text" style="text-align: justify; margin-top: 10px;">
+      L'<b>application Malienw Akilina</b> est une plateforme de partage d'idée, permettant aux Maliens de s'exprimer de 
+      manière très respectueux et de façon convenable pour mieux construire le Mali.
+      <br>
+      <b>Partager vos idées en fonction d'un ministère</b>
+    </p>
   </div>
 
-  <!-- <ion-searchbar show-clear-button="always" clear-icon="trash-bin" value="Rechercher..."  [(ngModel)]="searchText"></ion-searchbar> -->
-  <ion-searchbar placeholder="Rechercher..."  name="searchText"
-  [(ngModel)]="searchText"></ion-searchbar>
+  <div class="row sea">
+    <ion-searchbar placeholder="Rechercher..."  name="searchText" 
+    [(ngModel)]="searchText"></ion-searchbar>
+  </div>
 
   <ion-grid >
     <ion-row>
-      <ion-col >
-        <ion-card class="crd">
+      <ion-col size="12" *ngFor="let minist of ministere | paginate:{itemsPerPage: 4, currentPage:p} | filter:searchText;">
+        <ion-card class="crd cd" routerLink="/ministere/{{minist.id_ministere}}">
           <ion-card-header>
-            <img class="ig" src="../../assets/images/minis.png" routerLink="/ministere">
-            <ion-card-subtitle>Ministere de l'education national</ion-card-subtitle>
+            <img  src={{minist.image}}  srcset="">
+            <ion-card-subtitle>{{minist.libelle}}</ion-card-subtitle>
           </ion-card-header>
         </ion-card>
       </ion-col>
     </ion-row>
-      <ion-row>
-      <ion-col>
-        <ion-card class="crd">
-          <ion-card-header>
-            <img class="ig" src="../../assets/images/minis.png" routerLink="/ministere">
-            <ion-card-subtitle>Ministere de l'enseignement superieur et de la recherche scientifique</ion-card-subtitle>
-          </ion-card-header>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-card class="crd">
-          <ion-card-header>
-            <img class="ig" src="../../assets/images/minis.png">
-            <ion-card-subtitle>Ministere de l'agriculture</ion-card-subtitle>
-          </ion-card-header>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+
   </ion-grid>
-  <pagination-controls (pageChange)="p = $event"></pagination-controls>
-  
+  <div class="pag">
+  <pagination-controls (pageChange)="p = $event"></pagination-controls> 
+</div>
+  </div>
 </ion-content>
