--- a/src/app/commentaire/commentaire.page.scss
+++ b/src/app/commentaire/commentaire.page.scss
@@ -1,13 +1,79 @@
-.rounded-circle{
-    width: 35px;
-    height: 35px;
+
+ion-content{
+    position: relative;
 }
-h6 {
-    margin-top: -13px;
+
+ion-footer ion-toolbar{
+    --background: #f4f4f4;
 }
-.d-flex.flex-row.align-items-start {
-    margin-bottom: 23px;
+ion-footer ion-button {
+    font-weight: 600;
 }
-button.btn.btn-primary.btn-sm.shadow-none {
+
+ion-input{
+    background: white !important;
+    height: 31px;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    border-radius: 4px;
+    border: 1px #dfdfdf solid;
+    --padding-start: 8px ;
+}
+
+ion-avatar{
+    height: 45px;
+    width: 45px;
+}
+h3{
+    font-weight: 700;
+    font-size: 15px;
+    margin-top: 10px;
     margin-left: 7px;
 }
+.flex_box{
+    display: flex;
+    justify-content: space-between;
+}
+ion-note{
+    font-size: 13px;
+}
+.text-icon{
+    font-size: 22px;
+    margin-bottom: -6px;
+}
+p{
+    color: gray;
+}
+::before {
+    margin-left: 39px;
+}
+
+.av {
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: 900;
+}
+.deux {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+ion-buttons.buttons-first-slot.sc-ion-buttons-ios-h.sc-ion-buttons-ios-s.ios.hydrated {
+    margin-bottom: 12px;
+}
+ion-item{
+    display: block;
+}
+
+.tout{
+    display: grid;
+    grid-template-columns: 20% 60% 10%;
+    margin-bottom: 10px;
+}
+p{
+font-size: 12px;
+}
+
+
