--- a/src/app/inscription/inscription.page.scss
+++ b/src/app/inscription/inscription.page.scss
@@ -1,21 +1,25 @@
-h2 {
-    text-align: center;
-    margin-bottom: 24px;
+
+
+img {
+    width: 70%;
 }
-.form-group {
-    margin-bottom: 23px;
+.form-group{
+    margin-bottom: 6px !important;
 }
 .inscription{
-    width: 60%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #24A8F2;
-    border-radius: 11PX;
     color: white; 
+    border-radius: 11PX;
     height: 35px; 
-    margin-bottom: 15px;
 }
-img {
-    margin-top: 22px;
-}
+
 p.ins {
-    margin-bottom: 20px;
+    margin-top: 8px;
+}
+label {
+    display: inline-block;
+    font-size: 11px;
 }
