--- a/src/app/ministere/ministere.page.scss
+++ b/src/app/ministere/ministere.page.scss
@@ -1,28 +1,75 @@
-.link-muted { color: #aaa; } .link-muted:hover { color: #1266f1; }
-ion-card-title{
-    text-align: center;
-}
-ion-card-content{
-    text-align: center;
-}
-.av{
-    text-align: center;
-}
-.d-flex.flex-start.mb-4 {
-    margin-top: 36px;
+
+ion-content{
+    position: relative;
 }
 
-.rounded-circle{
-    width: 35px;
-    height: 35px;
+ion-footer ion-toolbar{
+    --background: #f4f4f4;
 }
-h6 {
-    margin-top: -13px;
+ion-footer ion-button {
+    font-weight: 600;
 }
-button.btn.btn-primary.btn-sm.shadow-none {
+
+ion-input{
+    background: white !important;
+    height: 31px;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    border-radius: 4px;
+    border: 1px #dfdfdf solid;
+    --padding-start: 8px ;
+}
+
+ion-avatar{
+    height: 45px;
+    width: 45px;
+}
+h3{
+    font-weight: 700;
+    font-size: 15px;
+    margin-top: 10px;
     margin-left: 7px;
 }
 
-.bg-light.p-2 {
-    margin-bottom: 25px;
+
+.text-icon{
+    font-size: 22px;
+    margin-bottom: -6px;
+}
+p{
+    color: gray;
+}
+::before {
+    margin-left: 39px;
+}
+
+.av {
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: 900;
+}
+.deux {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+ion-buttons.buttons-first-slot.sc-ion-buttons-ios-h.sc-ion-buttons-ios-s.ios.hydrated {
+    margin-bottom: 12px;
+}
+
+
+.tout{
+    display: grid;
+    grid-template-columns: 20% 60% 10%;
+}
+p{
+font-size: 12px;
+}
+.card {
+    margin-bottom: 11px;
+}
+i.bi.bi-chat-dots {
+    margin-right: 92px;
 }
