--- a/src/app/commentaire/commentaire.page.html
+++ b/src/app/commentaire/commentaire.page.html
@@ -12,7 +12,7 @@
       <ion-col>
         <ion-card class="crd" >
           <ion-card-header>
-            <ion-card-content style="text-align: center;"> Description de l'idée </ion-card-content>
+            <ion-card-content style="text-align: center;"> Contenu de l'idée </ion-card-content>
           </ion-card-header>
         </ion-card>
       </ion-col>
@@ -34,7 +34,14 @@
           
         </div>
       <div class="pp">
-        <i class="fas fa-regular fas fa-ellipsis-vertical " slot="start"></i>
+        <div class="dropdown">
+          <i type="button" data-bs-toggle="dropdown" aria-expanded="false" class="fa-solid fa-ellipsis"  slot="start" slot="start"></i>
+          
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Modifier <i class="bi bi-pencil" style="color: rgb(98, 163, 85);"></i> </a></li>
+            <li><a class="dropdown-item" href="#">Supprimer <i class="bi bi-trash3" style="color: red;"></i></a></li>
+          </ul>
+        </div>
       </div>
       </div>
     </div>
