--- a/src/app/inscription/inscription.page.html
+++ b/src/app/inscription/inscription.page.html
@@ -169,7 +169,7 @@
      Votre inscription a réussi avec succès!
     </div>
     <p class="txtAuth">
-      Ou conectez-vous avec
+      Ou inscrivez-vous avec
     </p>
   
     <div class="iconss">
