--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -7,41 +7,8 @@
   </ion-toolbar>
 </ion-header>
 
-<!-- <ion-content>
-  <div class="card" >
-    <div class="tout">
-      <div class="first">
-        <ion-avatar slot="start">
-          <img src="../../assets/images/avatar.png" />
-        </ion-avatar>
-      </div>
-      
-      <div class="md">
-        <h3>Abdoulaye Sy</h3> vient de partager une idée écrite dans le ministere 
-        de l'éducation nationale
-      </div>
-    </div>
-  </div>
-
-  <div class="card" >
-    <div class="tout">
-      <div class="first">
-        <ion-avatar slot="start">
-          <img src="../../assets/images/avatar.png" />
-        </ion-avatar>
-      </div>
-      
-      <div class="md">
-        <h3>Abass Maiga</h3> vient de partager une idée vocale dans le ministere 
-        de l'éducation nationale
-      </div>
-    </div>
-  </div>
-
-</ion-content> -->
-
 <ion-content>
-  <ion-list>
+  <ion-list lines="full">
     <ion-item>
       <ion-avatar slot="start">
         <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
