--- a/src/app/password-update/password-update.page.html
+++ b/src/app/password-update/password-update.page.html
@@ -7,17 +7,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background-color: white;">
   <div class="mm" style="margin-top: 15%;">
   <div class="inputWithIcon">
   <input type="text" placeholder="Mot de passe actuel">
-  <i class="fa-regular fa-lock"></i></div> 
+  <i class="bi bi-shield-lock"></i></div>
 <div class="inputWithIcon">
   <input type="text" placeholder="Nouveau mot de passe">
-  <i class="fa-regular fa-key"></i></div> 
+  <i class="bi bi-key"></i></div>
 <div class="inputWithIcon">
   <input type="text" placeholder="Retaper le nouveau mot de passe">
-  <i class="fa-regular fa-key"></i></div> 
+  <i class="bi bi-key"></i></div> 
 </div>
 
 <br>
@@ -27,7 +27,7 @@
 <br>
 <p class="ins" style="text-align: center; margin-top: 2%;">
   <span style="color: #ffff">
-    <a routerLink="/reset">Mot de Passe oublié ?</a>
+    <a routerLink="/password-forget">Mot de Passe oublié ?</a>
   </span>
 </p>
 </ion-content>
