--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background-color: white;">
   <div class="" style="width: 98%; margin-left: auto; margin-right: auto;">
   <div class="row ">
     <div class="tit">
