--- a/src/app/commentaire/commentaire.page.scss
+++ b/src/app/commentaire/commentaire.page.scss
@@ -1,82 +1,126 @@
 
-ion-content{
-    position: relative;
-}
-
-ion-footer ion-toolbar{
-    --background: #f4f4f4;
-}
-ion-footer ion-button {
-    font-weight: 600;
-}
-
-ion-input{
-    background: white !important;
-    height: 31px;
-    width: 95%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    border-radius: 4px;
-    border: 1px #dfdfdf solid;
-    --padding-start: 8px ;
-}
-
-ion-avatar{
-    height: 45px;
-    width: 45px;
-}
-h3{
-    font-weight: 700;
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 7px;
-}
-.flex_box{
-    display: flex;
-    justify-content: space-between;
-}
-ion-note{
-    font-size: 13px;
-}
-.text-icon{
-    font-size: 22px;
-    margin-bottom: -6px;
-}
-p{
-    color: gray;
-}
-::before {
-    margin-left: 35px;;
-}
-
-.av {
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: 900;
-}
-// .deux {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
+// ion-content{
+//     position: relative;
 // }
 
-ion-buttons.buttons-first-slot.sc-ion-buttons-ios-h.sc-ion-buttons-ios-s.ios.hydrated {
-    margin-bottom: 12px;
+// ion-footer ion-toolbar{
+//     --background: #f4f4f4;
+// }
+// ion-footer ion-button {
+//     font-weight: 600;
+// }
+
+// ion-input{
+//     background: white !important;
+//     height: 31px;
+//     width: 95%;
+//     margin-left: 2.5%;
+//     margin-right: 2.5%;
+//     border-radius: 4px;
+//     border: 1px #dfdfdf solid;
+//     --padding-start: 8px ;
+// }
+
+// ion-avatar{
+//     height: 45px;
+//     width: 45px;
+// }
+// h3{
+//     font-weight: 700;
+//     font-size: 15px;
+//     margin-top: 10px;
+//     margin-left: 7px;
+// }
+// .flex_box{
+//     display: flex;
+//     justify-content: space-between;
+// }
+// ion-note{
+//     font-size: 13px;
+// }
+// .text-icon{
+//     font-size: 22px;
+//     margin-bottom: -6px;
+// }
+// p{
+//     color: gray;
+// }
+// ::before {
+//     margin-left: 35px;;
+// }
+
+// .av {
+//     margin-bottom: 10px;
+//     text-align: center;
+//     font-weight: 900;
+// }
+// // .deux {
+// //     display: flex;
+// //     flex-direction: row;
+// //     justify-content: space-between;
+// // }
+
+// ion-buttons.buttons-first-slot.sc-ion-buttons-ios-h.sc-ion-buttons-ios-s.ios.hydrated {
+//     margin-bottom: 12px;
+// }
+// ion-item{
+//     display: block;
+// }
+
+// .tout{
+//     display: grid;
+//     grid-template-columns: 20% 60% 10%;
+//     margin-bottom: 10px;
+// }
+// p{
+// font-size: 12px;
+// }
+
+// .card {
+//     margin-bottom: 3%;
+// }
+
+
+.social-cards ion-col {
+    padding: 0;
+  }
+
+  .tt{
+    margin-top: 7px;
+    margin-left: -65px;
+    position: absolute;
+
 }
-ion-item{
-    display: block;
+h2 {
+    margin-left: 5%;
+    margin-top: -3%;
 }
 
-.tout{
-    display: grid;
-    grid-template-columns: 20% 60% 10%;
-    margin-bottom: 10px;
+button {
+    background: none;
 }
-p{
-font-size: 12px;
+ul{
+    z-index: 120;
+ }
+
+ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
+    margin-left: 26px;
+}
+.nav{
+    position: fixed;
 }
 
-.card {
-    margin-bottom: 3%;
+.imgae{
+    width: 40px !important;
+    height: 40px;
+}
+
+.card-header{
+    height: 50px !important;
+    background-color: white;
+}
+
+.mm {
+    margin-left: -42%;
 }
 
