--- a/src/app/ministere/ministere.page.scss
+++ b/src/app/ministere/ministere.page.scss
@@ -1,76 +1,65 @@
 
-ion-content{
-    position: relative;
+.social-cards ion-col {
+    padding: 0;
+  }
+
+  .tt{
+    margin-top: 7px;
+    margin-left: -65px;
+    position: absolute;
+
+}
+h2 {
+    margin-left: 5%;
+    margin-top: -3%;
 }
 
-ion-footer ion-toolbar{
-    --background: #f4f4f4;
+button {
+    background: none;
 }
-ion-footer ion-button {
-    font-weight: 600;
+ul{
+    z-index: 120;
+ }
+
+ ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
+    margin-left: 26px;
+}
+.nav{
+    position: fixed;
 }
 
-ion-input{
-    background: white !important;
-    height: 31px;
-    width: 95%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    border-radius: 4px;
-    border: 1px #dfdfdf solid;
-    --padding-start: 8px ;
+.imgae{
+    width: 40px !important;
+    height: 40px;
 }
 
-ion-avatar{
-    height: 45px;
-    width: 45px;
+.textComment{
+    font-size: 10px;
+    text-align: justify;
 }
-h3{
-    font-weight: 700;
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 7px;
+.iconComment{
+    font-size: 12px;
 }
-
-
-.text-icon{
-    font-size: 22px;
-    margin-bottom: -6px;
-}
-p{
-    color: gray;
-}
-::before {
-    margin-left: 35px;
+.card-header{
+    height: 55px !important;
+    background-color: white;
 }
 
-.av {
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: 900;
-}
-.deux {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.card-footer{
+    height: 50px !important;
+    background-color: white;
 }
 
-ion-buttons.buttons-first-slot.sc-ion-buttons-ios-h.sc-ion-buttons-ios-s.ios.hydrated {
-    margin-bottom: 12px;
-}
+// .sc-ion-label-md-s h3, .sc-ion-label-md-s h4, .sc-ion-label-md-s h5, .sc-ion-label-md-s h6 {
+//     margin-left: -49px;
+//     margin-right: 0;
+//     margin-top: -1px;
+//     margin-bottom: 2px;
+//     font-size: 19px;
+//     font-weight: 600;
+//     line-height: normal;
+// }
 
-
-.tout{
-    display: grid;
-    grid-template-columns: 20% 60% 10%;
+.mm {
+    margin-left: -42%;
 }
-p{
-font-size: 12px;
-}
-.card {
-    margin-bottom: 11px;
-}
-i.bi.bi-chat-dots {
-    margin-right: 92px;
-}
-
